--- a/contracts/SlashIndicator.template
+++ b/contracts/SlashIndicator.template
@@ -22,6 +22,7 @@ contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
   uint32 public constant CHAINID = {{chainid}};
   uint256 public constant INIT_FELONY_DEPOSIT = 1e21;
   uint256 public constant INIT_FELONY_ROUND = 2;
+  uint256 public constant INFINITY_ROUND = 0xFFFFFFFFFFFFFFFF;
 
   // State of the contract
   address[] public validators;
@@ -108,7 +109,7 @@ contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
     require(validator1 != address(0x00), "header data is illegal");
     require(validator1 == validator2, "2 blocks' validators aren't same");
     require(IValidatorSet(VALIDATOR_CONTRACT_ADDR).isValidator(validator1), "not a validator");
-    IValidatorSet(VALIDATOR_CONTRACT_ADDR).felony(validator1, type(uint256).max, felonyDeposit);
+    IValidatorSet(VALIDATOR_CONTRACT_ADDR).felony(validator1, INFINITY_ROUND, felonyDeposit);
     ISystemReward(SYSTEM_REWARD_ADDR).claimRewards(payable(msg.sender), rewardForReportDoubleSign);
   }
 
