--- a/contracts/GovHub.template
+++ b/contracts/GovHub.template
@@ -9,7 +9,8 @@ import "./interface/IParamSubscriber.sol";
 
 /// This is the smart contract to manage governance votes
 contract GovHub is System, IParamSubscriber {
-  using RLPDecode for *;
+  using RLPDecode for bytes;
+  using RLPDecode for RLPDecode.RLPItem;
 
   uint256 public constant PROPOSAL_MAX_OPERATIONS = 1;
   uint256 public constant VOTING_PERIOD = {{votingPeriod}};
