--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -52,4 +52,6 @@ jobs:
           node generate-system.js --mock true
           node generate-candidatehub.js --mock true
           node generate-pledgeagent.js --mock true
+          node generate-validatorset.js --mock true
+          node generate-slash.js -c 1112
           brownie test -v --stateful false
