reset validator count

--- a/init_cycle.template
+++ b/init_cycle.template
@@ -2,7 +2,8 @@ const web3 = require("web3")
 const init_cycle = {
     blockPeriod: 3,
     epochLength: 200,
-    roundInterval: 86400
+    roundInterval: 86400,
+    validatorCount: 21
 };
 
 
