optimization of pledged contracts 1.support part of the undelegate 2.undelegate deposit T+N to unlock 3.non-first pledge amount is limited to the requiredCoinDeposit
(cherry picked from commit 7669ffda038f8fcb43f6c5ca36f44384dc708ed2)

--- a/contracts/PledgeAgent.template
+++ b/contracts/PledgeAgent.template
@@ -15,6 +15,7 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
   uint256 public constant INIT_REQUIRED_COIN_DEPOSIT = 1e18;
   uint256 public constant INIT_HASH_POWER_FACTOR = 20000;
   uint256 public constant POWER_BLOCK_FACTOR = {% if mock %}1{% else %}1e18{% endif %};
+  uint256 public constant INIT_UNDELEGATE_LOCK_TURNS = 3;
 
   uint256 public requiredCoinDeposit;
 
@@ -48,8 +49,15 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
   // It is initialized to 1.
   uint256 public roundTag;
 
+  uint256 public undelegateLockTurns;
+
+  mapping(address => uint128[]) public undelegateUnlockMap;
+
   struct CoinDelegator {
+    // the deposit amount used to collect history reward.
+    // if the changeRound over than reward round, use newDeposit instead
     uint256 deposit;
+    // newest deposit amount
     uint256 newDeposit;
     uint256 changeRound;
     uint256 rewardIndex;
@@ -104,6 +112,7 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
   function init() external onlyNotInit {
     requiredCoinDeposit = INIT_REQUIRED_COIN_DEPOSIT;
     powerFactor = INIT_HASH_POWER_FACTOR;
+    undelegateLockTurns = INIT_UNDELEGATE_LOCK_TURNS;
     roundTag = 1;
     alreadyInit = true;
   }
@@ -259,8 +268,23 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
   /// Undelegate coin from a validator
   /// @param agent The operator address of validator
   function undelegateCoin(address agent) external {
-    uint256 deposit = undelegateCoin(agent, msg.sender);
-    payable(msg.sender).transfer(deposit);
+    undelegateCoin(agent, 0);
+  }
+
+  /// Undelegate coin from a validator
+  /// @param agent The operator address of validator
+  /// @param amount The coin amount for undelegate
+  function undelegateCoin(address agent, uint256 amount) public {
+    uint256 deposit = undelegateCoin(agent, msg.sender, amount);
+    uint128[] storage list = undelegateUnlockMap[msg.sender];
+    uint256 lockTurns = undelegateLockTurns == 0 ? INIT_UNDELEGATE_LOCK_TURNS : undelegateLockTurns;
+    uint256 unlockRound = roundTag + lockTurns;
+    uint256 len = list.length;
+    if (len != 0 && (list[len-1] >> 96) == unlockRound) {
+      list[len-1] += uint128(deposit);
+    } else {
+      list.push(uint128((unlockRound << 96) | deposit));
+    }
     emit undelegatedCoin(agent, msg.sender, deposit);
   }
 
@@ -268,13 +292,21 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
   /// @param sourceAgent The validator to transfer coin stake from
   /// @param targetAgent The validator to transfer coin stake to
   function transferCoin(address sourceAgent, address targetAgent) external {
+    transferCoin(sourceAgent, targetAgent, 0);
+  }
+
+  /// Transfer coin stake to a new validator
+  /// @param sourceAgent The validator to transfer coin stake from
+  /// @param targetAgent The validator to transfer coin stake to
+  /// @param amount The coin amount for transfer
+  function transferCoin(address sourceAgent, address targetAgent, uint256 amount) public {
     if (!ICandidateHub(CANDIDATE_HUB_ADDR).canDelegate(targetAgent)) {
       revert InactiveAgent(targetAgent);
     }
     if (sourceAgent == targetAgent) {
       revert SameCandidate(sourceAgent, targetAgent);
     }
-    uint256 deposit = undelegateCoin(sourceAgent, msg.sender);
+    uint256 deposit = undelegateCoin(sourceAgent, msg.sender, amount);
     uint256 newDeposit = delegateCoin(targetAgent, msg.sender, deposit);
     emit transferredCoin(sourceAgent, targetAgent, msg.sender, deposit, newDeposit);
   }
@@ -296,14 +328,18 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
       Agent storage a = agentsMap[agentList[i]];
       if (a.rewardSet.length == 0) continue;
       CoinDelegator storage d = a.cDelegatorMap[msg.sender];
-      if (d.newDeposit == 0) continue;
+      if (d.newDeposit == 0 && d.deposit == 0) continue;
       int256 roundCount = int256(a.rewardSet.length - d.rewardIndex);
       reward = collectCoinReward(a, d, roundLimit);
       roundLimit -= roundCount;
       rewardSum += reward;
+      if (d.newDeposit == 0 && d.deposit == 0) {
+        delete a.cDelegatorMap[msg.sender];
+      }
       // if there are rewards to be collected, leave them there
       if (roundLimit < 0) break;
     }
+    rewardSum += collectLockDeposit(msg.sender);
     if (rewardSum != 0) {
       distributeReward(payable(msg.sender), rewardSum);
     }
@@ -324,54 +360,66 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
     address delegator,
     uint256 deposit
   ) internal returns (uint256) {
+    require(deposit >= requiredCoinDeposit, "deposit is too small");
     Agent storage a = agentsMap[agent];
-    uint256 newDeposit = a.cDelegatorMap[delegator].newDeposit + deposit;
+    uint256 newDeposit = deposit;
+    
+    CoinDelegator storage d = a.cDelegatorMap[delegator];
+    uint256 rewardAmount;
+    if (d.changeRound != 0) {
+      rewardAmount = collectCoinReward(a, d, 0x7FFFFFFF);
+    }
 
-    a.totalDeposit += deposit;
-    if (newDeposit == deposit) {
-      require(deposit >= requiredCoinDeposit, "deposit is too small");
-      uint256 rewardIndex = a.rewardSet.length;
-      a.cDelegatorMap[delegator] = CoinDelegator(0, deposit, roundTag, rewardIndex);
+    if (d.newDeposit == 0 && d.deposit == 0) {
+      a.cDelegatorMap[delegator] = CoinDelegator(0, deposit, roundTag, a.rewardSet.length);
     } else {
-      require(deposit != 0, "deposit value is zero");
-      CoinDelegator storage d = a.cDelegatorMap[delegator];
-      uint256 rewardAmount = collectCoinReward(a, d, 0x7FFFFFFF);
+      newDeposit = d.newDeposit;
       if (d.changeRound < roundTag) {
-        d.deposit = d.newDeposit;
+        d.deposit = newDeposit;
         d.changeRound = roundTag;
       }
+      newDeposit += deposit;
       d.newDeposit = newDeposit;
-      if (rewardAmount > 0) {
+    }
+
+    a.totalDeposit += deposit;
+    if (rewardAmount != 0) {
         distributeReward(payable(delegator), rewardAmount);
-      }
     }
     return newDeposit;
   }
 
-  function undelegateCoin(address agent, address delegator) internal returns (uint256) {
+  function undelegateCoin(address agent, address delegator, uint256 amount) internal returns (uint256) {
     Agent storage a = agentsMap[agent];
     CoinDelegator storage d = a.cDelegatorMap[delegator];
     uint256 newDeposit = d.newDeposit;
+    if (amount == 0) amount = newDeposit;
     require(newDeposit != 0, "delegator does not exist");
-
-    uint256 rewardAmount = collectCoinReward(a, d, 0x7FFFFFFF);
-
-    a.totalDeposit -= newDeposit;
-    if (a.rewardSet.length != 0) {
-      Reward storage r = a.rewardSet[a.rewardSet.length - 1];
-      if (r.round == roundTag) {
-        if (d.changeRound < roundTag) {
-          r.coin -= newDeposit;
-        } else {
-          r.coin -= d.deposit;
-        }
-      }
+    if (newDeposit != amount) {
+      require(amount >= requiredCoinDeposit, "undelegate amount is too small"); 
+      require(newDeposit >= requiredCoinDeposit + amount, "remain amount is too small");
     }
-    delete a.cDelegatorMap[delegator];
+    uint256 rewardAmount = collectCoinReward(a, d, 0x7FFFFFFF);
+    a.totalDeposit -= amount;
+
+    bool haveReward;
+    if (a.rewardSet.length != 0) {
+      haveReward = a.rewardSet[a.rewardSet.length - 1].round == roundTag;
+    }
+    if (!haveReward && newDeposit == amount) {
+      delete a.cDelegatorMap[delegator];
+    } else {
+      if(d.changeRound != roundTag) {
+        d.changeRound = roundTag;
+        d.deposit = newDeposit;
+      }
+      d.newDeposit = newDeposit - amount;
+    }
+
     if (rewardAmount > 0) {
       distributeReward(payable(delegator), rewardAmount);
     }
-    return newDeposit;
+    return amount;
   }
 
   function collectCoinReward(
@@ -419,6 +467,31 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
     return rewardAmount;
   }
 
+  function collectLockDeposit(address delegator) public returns (uint256) {
+    uint256 rewardSum;
+    uint128[] storage list = undelegateUnlockMap[delegator];
+    uint256 len = list.length;
+    uint256 curRound = roundTag;
+    bool del = len > 0;
+    for (uint256 i = len; i > 0; --i) {
+      uint128 pair = list[i - 1];
+      if (pair != 0) {
+        uint256 round = pair >> 96;
+        uint256 deposit = pair & (2**96-1);
+        if (round < curRound) {
+          del = false;
+        } else {
+          rewardSum += deposit;
+          list[i - 1] = 0;
+        }
+      }
+    }
+    if (del) {
+      delete undelegateUnlockMap[msg.sender];
+    }
+    return rewardSum;
+  }
+
   /*********************** Governance ********************************/
   /// Update parameters through governance vote
   /// @param key The name of the parameter
@@ -439,6 +512,12 @@ contract PledgeAgent is IPledgeAgent, System, IParamSubscriber {
         revert OutOfBounds(key, newHashPowerFactor, 1, type(uint256).max);
       }
       powerFactor = newHashPowerFactor;
+    } else if (Memory.compareStrings(key, "undelegateLockTurns")) {
+      uint256 newUndelegateLockTurns = BytesToTypes.bytesToUint256(32, value);
+      if (newUndelegateLockTurns == 0) {
+        revert OutOfBounds(key, newUndelegateLockTurns, 1, type(uint256).max);
+      }
+      undelegateLockTurns = newUndelegateLockTurns;
     } else {
       require(false, "unknown param");
     }
