revert to testnet config

--- a/init_cycle.template
+++ b/init_cycle.template
@@ -2,8 +2,7 @@ const web3 = require("web3")
 const init_cycle = {
     blockPeriod: 3,
     epochLength: 200,
-    roundInterval: 86400,
-    validatorCount: 21
+    roundInterval: 86400
 };
 
 
