More Burn fuzz tests

--- a/foundry.toml
+++ b/foundry.toml
@@ -4,10 +4,11 @@ out = "out"
 libs = ["lib"]
 test = "tests/foundry"
 cache_path = "forge-cache"
+no_match_contract = "TestLibMemory"
 
 solc = "0.8.4"
 
 [fuzz]
-runs = 1000
+runs = 10_000
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
