--- a/contracts/System.template
+++ b/contracts/System.template
@@ -103,6 +103,13 @@ contract System {
     _;
   }
 
+  modifier onlyIfPositiveValue() {
+    require(msg.value > 0, "value should be greater than zero"); 
+    _;
+  }
+
+  modifier openForAll() {_;}
+
   /// The length of param mismatch. Default is 32 bytes.
   /// @param name the name of param.
   error MismatchParamLength(string name);
