--- a/contracts/ValidatorSet.template
+++ b/contracts/ValidatorSet.template
@@ -65,6 +65,11 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
   event paramChange(string key, bytes value);
   event received(address indexed from, uint256 amount);
 
+  modifier onlyIfCurrentValidator(address validator) {
+    require(currentValidatorSetMap[validator] > 0, "not a current validator");
+    _;
+  }
+
   /*********************** init **************************/
   function init() external onlyNotInit {
     (Validator[] memory validatorSet, bool valid) = decodeValidatorSet(INIT_VALIDATORSET_BYTES);
@@ -93,9 +98,20 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     }
   }
 
-  /// Add block reward on a validator 
-  /// @dev This method is called by the golang consensus engine every block
-  /// @param valAddr The validator address
+/* @product Called by the current block producer to add block reward to a validator
+   @logic
+      1. The caller passes with this call eth value that is not tested for min/max caps @openissue
+      2. If the current block number is a multiplier of SUBSIDY_REDUCE_INTERVAL (=10512000) 
+         the blockReward is reduced - from this operation henceforth - by a factor of 0.9639
+      3. if the validator address is valid, the validator's income is increased by a value 
+         calculated as follows:
+            a. start with the eth value passed by the block producer with the call
+            b. if the ValidatorSet balance (not including current transfer) is equal
+               or larger than the global totalInCome + blockReward then add blockReward eth 
+               to the value
+      4. ..And the global totalInCome value is increased by the same value
+      5. Else - a deprecatedDeposit() event is emitted
+*/
   function deposit(address valAddr) external payable onlyCoinbase onlyInit onlyZeroGasPrice {
     if (block.number % SUBSIDY_REDUCE_INTERVAL == 0) {
       blockReward = blockReward * REDUCE_FACTOR / 10000;
@@ -115,9 +131,27 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     }
   }
 
-  /// Distribute rewards to validators (and delegators through PledgeAgent)
-  /// @dev this method is called by the CandidateHub contract at the beginning of turn round
-  /// @dev this is where we deal with reward distribution logics
+/* @product Called by the CandidateHub contract at the beginning of turn round to distribute 
+    rewards to all validators (and delegators through PledgeAgent)
+   
+   @logic
+      1. all validators are iterated and for each an incentive value value is calculated 
+         to be 1% of the sum of the current validator income plus a global
+         blockRewardIncentivePercent value
+      2. Each validator's income gets reduce by the validator's incentive values
+      3. The sum of all validator's incentive values is stored as incentiveSum
+      4. After that the SystemReward's receiveRewards function is invoked with eth value
+         set to incentiveSum, read its doc for the details of its action
+      5. Once done, the validators are iterated over again and, for each validator:
+         if the validator's fee is positive that the validator reward is sent to the validator's 
+         fee address, after which the validator's income is zeroed the validator reward is 
+         calculated as a single promile (1/1000) of the validator's income times the 
+         validator's commissionThousandths value and the rewardSum of all validators is set 
+         to be the sum of all validators' (income - reward) values
+      6. After that, the PledgeAgent contract addRoundReward() function is invoked with eth value set 
+         to rewardSum and with operateAddressList and rewardList as params. Read its documentation for details.
+      7. Finally the global totalInCome value is set to zero
+*/
   function distributeReward() external override onlyCandidate returns (address[] memory operateAddressList) {
     address payable feeAddress;
     uint256 validatorReward;
@@ -163,11 +197,19 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     return operateAddressList;
   } 
 
-  /// Update validator set of the new round with elected validators 
-  /// @param operateAddrList List of validator operator addresses
-  /// @param consensusAddrList List of validator consensus addresses
-  /// @param feeAddrList List of validator fee addresses
-  /// @param commissionThousandthsList List of validator commission fees in thousandth
+/* @product Called by the CandidateHub contract as part of the turn round flow to update validator 
+       set of the new round with elected validators
+   @param operateAddrList: List of validator operator addresses
+   @param consensusAddrList: List of validator consensus addresses
+   @param feeAddrList: List of validator fee addresses
+   @param commissionThousandthsList: List of validator commission fees in promils (=thousandth)
+
+   @logic
+      1. The function validates that all list parameters are of the same length and that
+         each element commissionThousandthsList is less than 1000
+      2. It then replaces the current validators with the newly passed ones, each validator containing
+         an operate address, a consensus addrress, a fee address and a commissionThousandths count
+*/
   function updateValidatorSet(
     address[] calldata operateAddrList,
     address[] calldata consensusAddrList,
@@ -255,15 +297,24 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
     }
   }
 
-  /// Slash the validator for felony behaviors
-  /// @param validator The validator to slash
-  /// @param felonyRound The number of rounds to jail
-  /// @param felonyDeposit The amount of deposits to slash
-  function felony(address validator, uint256 felonyRound, uint256 felonyDeposit) external override onlySlash {
+/* @product Called by the Slash contract (only) to slash validators for felony behaviors
+   @param validator: The validator to slash
+   @param felonyRound: The number of rounds to jail the validator
+   @param felonyDeposit: The amount of deposits to slash
+
+   @logic
+        1. If the 'bad' validator is the only validator then he will not be jailed, but 
+           his income will be zeroed
+        2. Else the validator will be removed from the current.validators list
+        3. And a sum equal to the 'bad' validator income will be equally divided between the 
+           rest of the validators without clearing of the 'bad' validator's income @openissue
+        4. Finally the CandidateHub's jailValidator() function will be invoked to place the 
+           validator in jail for felonyRound and slash some amount of deposits. Read its 
+           documentation for more details
+*/
+  function felony(address validator, uint256 felonyRound, uint256 felonyDeposit) 
+            external override onlySlash onlyIfCurrentValidator(validator) {
     uint256 index = currentValidatorSetMap[validator];
-    if (index == 0) {
-      return;
-    }
     // the actually index
     index = index - 1;
     uint256 income = currentValidatorSet[index].income;
